// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`defineConfig > basic set 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "root/minify",
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > de-dupe plugins 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "batman",
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > defaults 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": false,
    "plainText": false,
    "pretty": false,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > minify and pretty 1`] = `
{
  "logLevel": "info",
  "plugins": [
    {
      "name": "root/minify",
      "symbol": Symbol(jsx-email/plugin),
    },
    {
      "name": "root/pretty",
      "symbol": Symbol(jsx-email/plugin),
    },
  ],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": false,
    "pretty": true,
  },
  "symbol": Symbol(jsx-email/config),
}
`;

exports[`defineConfig > plain 1`] = `
{
  "logLevel": "info",
  "plugins": [],
  "render": {
    "disableDefaultStyle": false,
    "inlineCss": false,
    "minify": true,
    "plainText": true,
    "pretty": true,
  },
  "symbol": Symbol(jsx-email/config),
}
`;
